# summarizer

./: .env  .env.example  .gitignore  .pylintrc  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DEMO_USAGE.md  QUICK_START.md  README.md  RELEASE_NOTES_v2.0.md  RELEASE_v6.0.0.md  RELEASE_v6.2.0.md  RELEASE_v7.0.0.md  SOCIAL_MEDIA_v6.0.0.md  SUCCESS_SUMMARY.md  api_server.py  changelog.json  force_push_test.txt  gui_launcher.py  install_gui.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  summarizer.py  suppress_warnings.py  test_force_push.py  user_settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml
api/: config.py
api/routes/: changelog.py  docs.py  health.py  test.py
api/utils/: helpers.py
config/: configuration_schema.json  user_settings.json
demo_project/: CHANGELOG.md  README.md  changelog.json  config.md  demo_utils.py  simple_demo.py
demo_project/config/: user_settings.json
features/: __init__.py  gui_installer.py  merge_command.py  parameter_checker.py  screenshot.py  terminal_commands.py
scripts/: api_key_manager.py  pre_publish_check.py  run_ci_checks.py
src/: config.py  main.py
src/core/: __init__.py  configuration_manager.py
src/gui/: __init__.py  modern_config_gui.py
src/services/: gemini_client.py  request_manager.py
src/utils/: changelog_updater.py  file_tracker.py  git_manager.py  io.py  json_changelog_manager.py  readme_generator.py  (+1 more)
tests/: test_macos_installer.py  test_main.py
