[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "summarizer-framework"
version = "14.3.0"
description = "An AI-powered project assistant for code analysis, versioning, and workflow automation."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
[[project.authors]]
name = "Bahadir Arda"
email = "bahadirarda96@icloud.com"

[project.scripts]
summarizer = "summarizer:main"
